# hg-ds-evals

./: AGENTS.md  CLAUDE.md  README.md  databricks.yml  pyproject.toml  requirements.txt
.codex/: config.toml
experiments/: README.md  api_report.py  api_report_multi.py  czkb_report.py  experiment_template.yaml  kb_checkpoint.py  kb_report.py  run_eval.py
experiments/api/configs/: api_exp_001_language.yaml  user.md.j2
experiments/api/notebooks/: api_report.py  (+6 more)
experiments/banking_tool_judge/: banking_tool_judge_exp_001.md
experiments/kb_analysis/: judge_translation.py
experiments/legacy/: czkb_checkpoint.py  skkb_checkpoint.py
experiments/non-determ-analysis/: api-nondeterminism-action-report.md  nondeterminism_analysis.ipynb
experiments/output/: output_exp_001_baseline.yaml
handovers/: P-tool-parameters.md  port-plan-review.md  refactoring-to-ai-data-science-evals.md
hg_ds_evals/: __init__.py
hg_ds_evals/common/: __init__.py  base_transformers.py  config_api.py  mlflow_otel.py  utils.py
hg_ds_evals/core/: types.py
hg_ds_evals/evals/: api_eval_runner.py  api_utils.py  evaluator.py  parsers.py  run.sh  run_evals.py
hg_ds_evals/llm/: api_calls.py  api_client.py
hg_ds_evals/preprocessing/: README.md  __init__.py  fallback.py  latency.py  mlflow_traces.md  mlflow_traces.py  skkb_traces.py  traces.py
hg_ds_evals/prompts/: builder.py  common.py
hg_ds_evals/rubrics/: base.py  fallback.py  loader.py  output_prompt.py
hg_ds_evals/transformers/: events.py  sessions.py
tests/: test_api_utils.py  test_kb_report_schema.py  test_skkb_traces.py
(+62 files in other folders)
