[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hg-ds-evals"
version = "0.1.0"
description = "Hey George Data Science Evaluations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ds_common @ file:///Workspace/Repos/Shared_HeyGeorge/hey-george-ds/ds_common",
    "pandas>=2.0",
    "pyspark>=3.5"
]
authors = [{ name = "Data Science Team" }]

[tool.setuptools.packages.find]
include = ["hg_ds_evals*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --assert=plain"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]